# memoryCHIPs

./: .gitignore  BLOCKCHAIN_INFO.md  CHANGELOG.md  CHANGELOG_EN.md  CONCEPT.md  CONCEPT_EN.md  LICENSE  MEMORYCHIP_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
.github/workflows/: ci.yml
memory_chip_readiness/: __init__.py  __main__.py  cache_coherency.py  cli.py  consolidation_scheduler.py  contracts.py  ecosystem_compat.py  foundation.py  host_interface.py  ltm_search_accel.py  multi_tenant.py  physical_memory.py  presets.py  process_area_power.py  standard_interface.py  stm_microarch.py  version.py
memory_chip_readiness/tests/: test_memory_chip.py
scripts/: generate_signature.py
